// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlayerList /> renders admin user properly 1`] = `
<ForwardRef(TableContainer)>
  <ForwardRef(Table)>
    <caption
      style={
        {
          "textAlign": "center",
        }
      }
    >
      <div>
        The game will start once all players are ready
      </div>
      <div>
        Current player count: 
        3
        /
        16
         max
      </div>
    </caption>
    <ForwardRef(TableHead)>
      <ForwardRef(TableRow)>
        <ForwardRef(TableCell)
          align="center"
        >
          Ready?
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)>
          Player
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)
          align="right"
        >
          Games Won
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell) />
      </ForwardRef(TableRow)>
    </ForwardRef(TableHead)>
    <ForwardRef(TableBody)>
      <ForwardRef(TableRow)
        key="1"
        style={
          {
            "backgroundColor": "rgba(0, 0, 0, 0.08)",
          }
        }
      >
        <ForwardRef(TableCell)
          align="center"
          padding="checkbox"
        >
          <ForwardRef(Checkbox)
            checked={false}
            onChange={[Function]}
            style={
              {
                "color": "red",
              }
            }
          />
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)>
          username
           - Admin
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)
          align="right"
        >
          0
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell) />
      </ForwardRef(TableRow)>
      <ForwardRef(TableRow)
        key="2"
        style={
          {
            "backgroundColor": "inherit",
          }
        }
      >
        <ForwardRef(TableCell)
          align="center"
        >
          <Memo(ForwardRef(CloseIcon))
            style={
              {
                "color": "red",
              }
            }
          />
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)>
          username
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)
          align="right"
        >
          0
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)>
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="small"
          >
            <Memo(ForwardRef(DeleteOutlineIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(TableCell)>
      </ForwardRef(TableRow)>
      <ForwardRef(TableRow)
        key="3"
        style={
          {
            "backgroundColor": "inherit",
          }
        }
      >
        <ForwardRef(TableCell)
          align="center"
        >
          <Memo(ForwardRef(CheckIcon))
            style={
              {
                "color": "green",
              }
            }
          />
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)>
          username
           - Winner
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)
          align="right"
        >
          3
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)>
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="small"
          >
            <Memo(ForwardRef(DeleteOutlineIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(TableCell)>
      </ForwardRef(TableRow)>
    </ForwardRef(TableBody)>
  </ForwardRef(Table)>
</ForwardRef(TableContainer)>
`;

exports[`<PlayerList /> renders properly with 3 players 1`] = `
<ForwardRef(TableContainer)>
  <ForwardRef(Table)>
    <caption
      style={
        {
          "textAlign": "center",
        }
      }
    >
      <div>
        The game will start once all players are ready
      </div>
      <div>
        Current player count: 
        3
        /
        16
         max
      </div>
    </caption>
    <ForwardRef(TableHead)>
      <ForwardRef(TableRow)>
        <ForwardRef(TableCell)
          align="center"
        >
          Ready?
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)>
          Player
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)
          align="right"
        >
          Games Won
        </ForwardRef(TableCell)>
      </ForwardRef(TableRow)>
    </ForwardRef(TableHead)>
    <ForwardRef(TableBody)>
      <ForwardRef(TableRow)
        key="1"
        style={
          {
            "backgroundColor": "rgba(0, 0, 0, 0.08)",
          }
        }
      >
        <ForwardRef(TableCell)
          align="center"
          padding="checkbox"
        >
          <ForwardRef(Checkbox)
            checked={false}
            onChange={[Function]}
            style={
              {
                "color": "red",
              }
            }
          />
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)>
          username
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)
          align="right"
        >
          0
        </ForwardRef(TableCell)>
      </ForwardRef(TableRow)>
      <ForwardRef(TableRow)
        key="2"
        style={
          {
            "backgroundColor": "inherit",
          }
        }
      >
        <ForwardRef(TableCell)
          align="center"
        >
          <Memo(ForwardRef(CloseIcon))
            style={
              {
                "color": "red",
              }
            }
          />
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)>
          username
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)
          align="right"
        >
          0
        </ForwardRef(TableCell)>
      </ForwardRef(TableRow)>
      <ForwardRef(TableRow)
        key="3"
        style={
          {
            "backgroundColor": "inherit",
          }
        }
      >
        <ForwardRef(TableCell)
          align="center"
        >
          <Memo(ForwardRef(CheckIcon))
            style={
              {
                "color": "green",
              }
            }
          />
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)>
          username
           - Winner
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)
          align="right"
        >
          3
        </ForwardRef(TableCell)>
      </ForwardRef(TableRow)>
    </ForwardRef(TableBody)>
  </ForwardRef(Table)>
</ForwardRef(TableContainer)>
`;

exports[`<PlayerList /> renders properly without gameInfo 1`] = `
<ForwardRef(TableContainer)>
  <ForwardRef(Table)>
    <caption
      style={
        {
          "textAlign": "center",
        }
      }
    >
      <div>
        The game will start once all players are ready
      </div>
      <div>
        Current player count: 
        0
        /
        16
         max
      </div>
    </caption>
    <ForwardRef(TableHead)>
      <ForwardRef(TableRow)>
        <ForwardRef(TableCell)
          align="center"
        >
          Ready?
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)>
          Player
        </ForwardRef(TableCell)>
        <ForwardRef(TableCell)
          align="right"
        >
          Games Won
        </ForwardRef(TableCell)>
      </ForwardRef(TableRow)>
    </ForwardRef(TableHead)>
    <ForwardRef(TableBody) />
  </ForwardRef(Table)>
</ForwardRef(TableContainer)>
`;
